# tools

./: .gitignore  READEME.md
.metals/: metals.lock.db
JifenScala/: .gitignore  main.build_artifacts.txt  main.scala  plan.html  tasks.py
JifenScala/lib/: html.scala  util.scala
XiPlan/: .gitignore  Ext.fs  Program.fs  XiPlan.fsproj  XiPlan.sln  justfile  justfile.nu  tasks.py  xiplan.html
XiPlan/src/: Dates.fs  Extensions.fs  GenerateHtml.fs  Program.fs
adimage/: .gitignore  README.md  Rakefile
adimage/spec/: adimage_spec.cr  spec_helper.cr
adimage/src/: adimage.cr
base64/base64-scala/: .gitignore  .scalafmt.conf  Main.scala  justfile  main.scala
calendar/calendar-fs/: .gitignore  Calendar.fs  Common.fs  Formater.Api.fs  Formater.Impl.fs  Formater.fs  Formatter.Api.fs  Formatter.Impl.fs  Persistence.Api.fs  Persistence.Impl.fs  Program.fs  calendar-fs.fsproj  calendar-fs.sln  justfile  justfile.nu
calendar/calendar-rs/: Cargo.toml  deno.json
calendar/calendar-rs/src/: lib.rs  main.rs
commands/commands_scala/: .gitignore  .scalafmt.conf  build.sbt  build.sc  deno.jsonc  justfile
commands/commands_scala_mill/: .scalafmt.conf  build.sc  deno.jsonc
deps_it/: .gitignore  .scalafmt.conf  deno.jsonc  deps.scala  justfile  main.scala  tasks.py
dict/idict/: Rakefile
dict/rdict/: Cargo.toml  deno.jsonc  justfile  tasks.py
dict/rdict/src/: app.rs  lib.rs  main.rs
dict/rdict/src/lib/: dict.rs  lib.rs  util.rs
dict/rdict/src/util/: mod.rs
diffdir/diffdir_scala/: .gitignore  .scalafmt.conf  README.md  build.sbt  build.sc  data1.txt  data2.txt  justfile
english/english_scala/: .gitignore  .scalafmt.conf  build.mill  build.sbt  build.sc  deno.jsonc  justfile
english/english_scala_mill/: .gitignore  build.sc  deno.jsonc
file_counter/file_counter_rs/: Cargo.toml  README.md
file_counter/file_counter_rs/src/: app.rs  lib.rs  main.rs
file_counter/file_counter_rs/src/app/: handlers.rs
file_counter/file_counter_rs/src/lib/: files.rs  lib.rs  predicates.rs  types.rs
filelinec/filelinec_rs/: Cargo.toml  README.md
fstitle/: FsTitle.fs  Program.fs
gen_test_dir/td_rs/: Cargo.toml  deno.json  justfile  rust-toolchain.toml
gen_test_dir/td_rs/src/: lib.rs  main.rs
gen_test_dir/td_rs/src/lib/: dir.rs  lib.rs  macros.rs  state.rs
head_news/: .scalafmt.conf  build.sbt  deno.jsonc
head_news_root/head_news.rs/: Cargo.toml  deno.jsonc  justfile
head_news_root/head_news.rs/src/: main.rs  sina.rs
head_news_root/head_news.rs/src/lib/: lib.rs  mod.rs  sina.rs  types.rs
head_news_root/head_news.scalajs.deno/: .gitignore  .scalafmt.conf  build.sbt  deno.jsonc  justfile
httpin/httpin-rs/: Cargo.toml  README.md  justfile
httpin/httpin-rs/src/: lib.rs  main.rs
httpin/httpin_fs/: .editorconfig  .gitignore  Program.fs  httpin_fs.fsproj  httpin_fs.sln  justfile
ibin/: README.md  Rakefile
ibin/src/: ibin.cr
icase/: README.md  Rakefile
icoder/icoder-rs/: Cargo.toml  README.md  justfile
icoder/icoder-rs/src/: app.rs  cli.rs  coder.rs  lib.rs  main.rs  nums.txt  read_line.rs
icoder/icoder-rs/src/lib/: coder.rs  lib.rs
icoder/icoder-rs/src/lib/coder/: unum.rs  url.rs
idemo/idemo_py/: README.md  justfile  justfile.nu  main.spec  pyproject.toml
idemo/idemo_py/_devops/scripts/lib/: mod.nu
idemo/idemo_py/src/idemo/: app.py  main.py
idict/: .gitignore  README.md  Rakefile  shard.yml
idownload/idownload.rs/: .gitignore  Cargo.toml  README.md  justfile.nu  rust-toolchain.toml  rustfmt.toml
idownload/idownload.rs/.cargo/: config.toml
idownload/idownload.rs/_devops/scripts/lib/: tasks.nu
idownload/idownload.rs/src/: main.rs
idownload/idownload.rs/src/lib/: app.rs  downloader.rs  lib.rs
ijy/: Projectfile  Rakefile
inspect_http_fs/: Program.fs  inspect_http.fsproj  inspect_http.sln
istock/istock_rs/: Cargo.toml  README.md  justfile.nu  rust-toolchain.toml
istock/istock_rs/.cargo/: config.toml
istock/istock_rs/scripts/lib/: mod.nu
istock/istock_rs/src/: lib.rs  main.rs
ititle/: Rakefile
jaes/: build.gradle  settings.gradle
jpackages/: .gitignore  Program.fs  jpackages.fsproj  justfile  tasks.py
jpm/jpm_rs/: Cargo.toml  deno.json  justfile
jpm/jpm_rs/src/: lib.rs  main.rs
json-fmt/jsonfmt-rs/: Cargo.toml  justfile
json-fmt/jsonfmt-rs/src/: lib.rs  main.rs
jsonrpc/jsonrpc_py/: .gitignore  README.md  justfile.nu  pyproject.toml
jsonrpc/jsonrpc_py/_devops/scripts/lib/: mod.nu
jsonrpc/jsonrpc_py/src/jsonrpc_py/: app.py  main.py
justfile_convert/: README.md  build.sbt  build.sc  deno.jsonc  justfile
jy/jy_rs/: .gitignore  Cargo.toml  README.md  deno.json  justfile  tasks.py
jy/jy_rs/src/: args.rs  jiayou.toml  main.rs  opt.rs
jy/jy_rs/src/lib/: app.rs  browser.rs  config.rs  constants.rs  domain.rs  infrastructure.rs  lib.rs  mod.rs  opt.rs
jy/jy_rs/src/lib/application/: mod.rs  run.rs  show_info.rs
jy/jy_rs/src/lib/domain/: jiayou_list.rs  mod.rs  url.rs
jy/jy_rs/src/lib/domain/gateway/: mod.rs
jy/jy_rs/src/lib/infrastructure/: browser.rs  config_provider.rs  mod.rs
jy_fs/: .gitignore  Program.fs  jy_fs.fsproj  jy_fs.sln  tasks.py
lsusb/lsusb-rs/: Cargo.toml  README.md  justfile
lsusb/lsusb-rs/src/: app.rs  main.rs  router.rs
mywhois_fs/: .gitignore  App.fs  Db.fs  Program.fs  invalidates.txt  mywhois_fs.fsproj  mywhois_fs.sln  names.fs  tasks.py  validates.txt  whois.fs
new_sln/: .gitignore  Library.fs  Program.fs  justfile  new_sln.fsproj  tasks.py
ppath/: README.md
prename/prename.py/: .gitignore  README.md  justfile.nu  pyproject.toml
prename/prename.py/src/prename/: __init__.py  app.py  decorators.py  main.py
rdict/: .gitignore  Cargo.toml  Rakefile
rdict/src/: lib.rs  main.rs
rdict/src/util/: mod.rs
rtitle/: .gitignore  Cargo.toml  Rakefile  tasks.py
test_fable_all/: deno.jsonc  main.ts
tip/tip_rs/: Cargo.toml  README.md  justfile  tasks.py
tip/tip_rs/src/: main.rs
title/rtitle/: Cargo.toml  justfile
title/rtitle/src/: app.rs  main.rs
title/rtitle/src/lib/: lib.rs  rtitle.rs  title.rs
wrk_fs/: App.fs  Args.fs  Program.fs  Wrk.fs  wrk_fs.fsproj  wrk_fs.sln
(+300 files in other folders)
