[package]
authors = ["itang <live.tang@gmail.com>"]
name = "rdict"
version = "0.2.8"
edition = "2018"


[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
structopt = "0.3.15"
toml = "0.5.6"
dirs = "3.0.0"
