[package]
name = "ifile_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ifile"
path = "src/main.rs"

[lib]
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.2.0", features = ["derive"] }

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
opt-level = 'z'     # Optimize for size
panic = 'abort'
