[package]
name = "td"
version = "0.5.0-20230406.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/lib.rs"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
#strip = "debuginfo"
strip = true
incremental = true
lto = true          # Link Time Optimization (LTO)
opt-level = 'z'     # Optimize for size
#codegen-units = 1   # Parallel Code Generation Units
panic = "abort"
