[package]
name = "td"
version = "0.5.0-20241005.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/lib.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
#once_cell = "1.20.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
#strip = "debuginfo"
strip = true
incremental = true
lto = true          # Link Time Optimization (LTO)
opt-level = 'z'     # Optimize for size
#codegen-units = 1   # Parallel Code Generation Units
panic = "abort"
