[package]
name = "head_news"
version = "0.2.1-20230322.1"
edition = "2021"


[lib]
name = "head_news"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.64"
reqwest = "0.11.14"
scraper = "0.14.0"
tabled = "0.10.0"
tokio = { version = "1.24.2", features = ["full"] }


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
lto = true          # Link Time Optimization (LTO)
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Parallel Code Generation Units
