[package]
name = "head_news"
version = "0.2.2-2024-0707.1"
edition = "2021"


[lib]
name = "head_news"
path = "src/lib/lib.rs"

[[bin]]
name = "inews"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#async-trait = "0.1.64"
reqwest = "0.12.5"
scraper = "0.19.0"
tabled = "0.15.0"
tokio = { version = "1.38.0", features = ["rt"] }


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
lto = true          # Link Time Optimization (LTO)
#opt-level = 'z'     # Optimize for size
#codegen-units = 1   # Parallel Code Generation Units
