[package]
name = "httpin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#name = "httpin"
#path = "src/lib.rs"

[dependencies]
axum = "0.7.2"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
#bytes = { version = "1.5.0", features = [] }
tracing = "0.1.40"
#async-trait = "0.1.74"
http = "1.0.0"
http-body-util = "0.1.0"
#hex = "0.4.3"


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
#opt-level = 'z'     # Optimize for size
#codegen-units = 1   # Parallel Code Generation Units
