[package]
name = "icoder"
version = "0.2.0-20241129.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "icoder"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
base64 = "0.22.1"
faster-hex = "0.9.0"
uuid = { version = "1.10.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
rand = "0.8.5"
chrono = "0.4.38"
md5 = "0.7.0"
url = { version = "2.5.2" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
opt-level = 'z'     # Optimize for size
panic = 'abort'
