[project]
name = "idemo"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "itang", email = "your@example.com" }]
dependencies = ["selenium>=4.24.0", "webdriver-manager>=4.0.2"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
idemo = 'idemo:main'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/idemo"]

[tool.ruff]
preview = true

[tool.uv]
dev-dependencies = ["ruff>=0.6.1"]

########################################################################################
# begin rye
[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.1.0"]
#sources = [{ name = "default", url = "https://mirrors.aliyun.com/pypi/simple/" }]
sources = [
    { name = "default", url = "https://pypi.tuna.tsinghua.edu.cn/simple/" },
]

[tool.rye.scripts]
main = "python test.py"
prod = { cmd = "python test.py", env = { MODE = "PRODUCTION" } }
# end rye
