[package]
name = "idownload"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
indicatif = "0.17"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
opt-level = 'z'     # Optimize for size
panic = 'abort'
