[package]
name = "jpm"
version = "0.3.0-20230616.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.1"
#tap = "1.0.1"


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
#opt-level = 'z'     # Optimize for size
#codegen-units = 1   # Parallel Code Generation Units
