[package]
name = "jpm"
version = "0.5.2-20260306.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "jp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
glob = "0.3.3"
#tap = "1.0.1"


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
#opt-level = 'z'     # Optimize for size
#codegen-units = 1   # Parallel Code Generation Units
