[package]
name = "jsonfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.2.0", features = ["derive"] }
serde = "1.0.189"
serde_json = "1.0.107"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
strip = "debuginfo"
incremental = true
#lto = true          # Link Time Optimization (LTO)
opt-level = 'z' # Optimize for size
panic = 'abort'
