[package]
name = "jy"
version = "0.3.6-20230507.1"
authors = ["itang <live.tang@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jy"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.71"
toml = "0.7.3"
webbrowser = "0.8.9"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"

[profile.release]
strip = "debuginfo"
incremental = true
