[package]
name = "jy"
version = "0.3.8-20240621.1"
authors = ["itang <live.tang@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jy"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.86"
toml = "0.8.14"
webbrowser = "1.0.1"
clap = { version = "4.5.7", features = ["derive"] }
dirs = "5.0.1"

[profile.release]
strip = "debuginfo"
incremental = true
