[package]
name = "tip"
version = "0.2.0-20240304.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
colour = "0.7.0"

[profile.release]
strip = "debuginfo"
