[package]
authors = ["itang <live.tang@gmail.com>"]
name = "rtitle"
version = "0.5.0-20240719.1"
edition = "2021"

[lib]
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["rt", "macros"] }

[profile.release]
strip = "debuginfo"
